Starting on website

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,3 +4,36 @@
     margin:0;
     border: 0;
 }
+
+@font-face {
+  font-family: "Cyberpunk Regular";
+  src: url("../public/fonts/Cyberpunk.ttf");
+}
+@font-face {
+  font-family: "Marvel Outline Italian";
+  src: url("../public/fonts/marvel_outline_italian.ttf");
+}
+@font-face {
+  font-family: "Marvel Outline";
+  src: url("../public/fonts/marvel_outline.ttf");
+}
+@font-face {
+  font-family: "Marvel Regular";
+  src: url("../public/fonts/marvel_regular.ttf");
+}
+@font-face {
+  font-family: "Marvel Regular Italian";
+  src: url("../public/fonts/marvel_regular_italian.ttf");
+}
+@font-face {
+  font-family: "Minimal Italian";
+  src: url("../public/fonts/minimal-italian.ttf");
+}
+@font-face {
+  font-family: "Minimal Regular";
+  src: url("../public/fonts/minimal.ttf");
+}
+@font-face {
+  font-family: "Year1991";
+  src: url("../public/fonts/year_1991.ttf");
+}
