Adding new font for year1991mode

--- a/styles/componentsStyle/ChooseMode.scss
+++ b/styles/componentsStyle/ChooseMode.scss
@@ -4,10 +4,9 @@
 }
 .heading {
   color: white;
-  font-family: "Andale Mono";
+  font-family: "Year1991";
   height: fit-content;
   width: fit-content;
-  font-weight: 100;
 }
 .theme_icon_holder {
   height: 30vh;
