--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,6 +36,10 @@
   font-family: "Minimal Regular";
   src: url("../public/fonts/minimal.ttf");
 }
+@font-face {
+  font-family: "Year1991";
+  src: url("../public/fonts/year1991.ttf");
+}
 
 .theme_icon_avatar{
   border-radius: 50%; 
