--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,6 +37,10 @@
   font-family: "Year1900";
   src: url("../public/fonts/year1900.ttf");
 }
+@font-face {
+  font-family: "Cyberpunk2 Regular";
+  src: url("../public/fonts/Cyberpunk2.ttf");
+}
 
 .theme_icon_avatar{
   border-radius: 50%; 
