--- a/styles/componentsStyle/ChooseMode.scss
+++ b/styles/componentsStyle/ChooseMode.scss
@@ -165,6 +165,7 @@ $choose_theme_mode_width : 10vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   border: 0;
   outline: none;
   background-color: #fcee09;
@@ -174,14 +175,16 @@ $choose_theme_mode_width : 10vw;
   font-family: "Cyberpunk2 Regular";
   font-size: 2vh;
   text-transform: uppercase;
+  height: 8vh;
+  width: 10vw;
   clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0% 75%, 0 0);
-  min-width: fit-content;
-  min-height: fit-content;
 }
 
 .cyberpunk_button_content{
-  height: 100%;
-  width: 100%;
+  height: 8vh;
+  width: 10vw;
+  text-align: center;
+  justify-content: center;
 }
 
 
