Optimised Marvel Theme Icon

--- a/styles/componentsStyle/ChooseMode.scss
+++ b/styles/componentsStyle/ChooseMode.scss
@@ -332,7 +332,7 @@ $choose_theme_mode_width : 10vw;
 }
 
 #marvel_theme_selector{
-  background-image: url("../../public//images/chooseThemeIcons/gif/marvel-hover-bg.gif");
+  background-color: red;
   background-repeat: no-repeat;
   background-size: 72vh 30vh;
 }
